example-manifests/01-istio/00-v1.0.0/demo-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: demo
  namespace: demo
spec:
  type: ClusterIP
  selector: 
    name: demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
