example-manifests/01-istio/00-v1.0.0/demo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo
  namespace: demo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - '*'
    port:
      number: 80
      name: http
      protocol: HTTP
