example-manifests/01-istio/00-v1.0.0/demo-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
  namespace: demo
spec:
  hosts:
  - demo.example.com
  gateways:
  - demo
  http:
  - route:
    - destination:
        host: demo
